tooling/nargo_cli/tests/snapshots/execution_success/loop_break_regression_8319/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main() {
    func_4([982714762, 1608230664, 671108204])
}

unconstrained fn func_4(a: [u32; 3]) {
    {
        let mut idx_b: Field = 0;
        loop {
            if idx_b == 6 {
                break;
            } else {
                idx_b = idx_b + 1;
                {
                    let mut idx_c: Field = 0;
                    loop {
                        if idx_c == 7 {
                            break;
                        } else {
                            idx_c = idx_c + 1;
                            for idx_d in (a[2] / 1193346642) % 4..a[1] % 4 {
                                {
                                    let mut idx_g: Field = 0;
                                    loop {
                                        if idx_g == 3 {
                                            break;
                                        } else {
                                            idx_g = idx_g + 1;
                                            let h: u32 = a[0] % idx_d;
                                            println(h);
                                        }
                                    }
                                };
                                break;
                            }
                        }
                    }
                };
            }
        }
    }
}
